--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrayLight">#bbbbbb</color>
     <color name="colorGrayDark">#444444</color>
+    <color name="colorBrightRed">#ff0000</color>
 </resources>
